# test-bazel-rules-expected

./: BUILD.bazel  README.md  WORKSPACE.bazel  main.cc
.github/workflows/: build.yml
